<resources>
    <string name="app_name">PlayTask</string>
    <string name="string_chinese">Chinese</string>
    <string name="string_english">English</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="str_title">Title</string>
    <string name="str_name">Name</string>
    <string name="tab_caption_1_item">Shopping Item</string>
    <string name="tab_caption_3_browser">Browser</string>
    <string name="tab_caption_2_map">Map</string>
    <string name="task_1">每日任务</string>
    <string name="task_2">每周任务</string>
    <string name="task_3">普通任务</string>
    <string name="task_4">副本任务</string>
    <string name="etAchievementPoints"></string>
    <string name="add_task">新建任务</string>
    <string name="add_reward">新建奖励</string>
    <string name="edit_task">编辑任务</string>
    <string name="join_task">加入副本</string>
    <string name="sort_name">排序</string>
    <string name="add_menu">添加菜单</string>
    <string name="add_title">标题</string>
    <string name="add_mark">成就点数</string>
    <string name="cost_mark">耗费的成就点数</string>
    <string name="add_num">数量（可选）</string>
    <string name="add_tag">通过标签对任务进行分类</string>
    <string name="add_ok">完成</string>
    <string name="task_introduction">成就点数：指您每完成一次任务可获得的成就点数。\n数量：指您此任务需要完成的次数。（默认为1次）\n\n每日任务：完成后次日凌晨两点重新出现。\n参考：8点前起床、吃早餐、30分钟有氧运动\n每周任务：完成后下周一凌晨两点重新出现。\n参考：整理房间、给家里打电话\n普通任务：完成后不再重新出现。\n参考：完成会议准备、完成毕业论文\n\n建议将任务可以获得的成就点根据您个人感觉的难易程度设置。</string>
    <string name="task_empty">无任务\nYesterday, you said tomorrow.</string>
    <string name="completed_empty">无已完成任务\n赶紧去完成任务吧</string>
    <string name="reward_introduction">欲望是您希望拥有、达成的事物。\n\n单次欲望：只需要满足一次的欲望。\n参考：进行一次周边游、买一条Nudie Jeans牛仔裤\n不限次欲望：可多次满足的欲望。\n参考：打一把lol、约一场电影、吃一次甜品。\n\n建议将欲望消耗的成就点根据您个人感觉的难易程度设置。</string>
    <string name="reward_empty">无奖励\n  弗洛伊德认为,人的潜意识中储存着很多原  \n始的欲望与冲动</string>
</resources>